# Beidou-SDR-SIM

./: CMakeLists.txt  README.md
include/: bds_sdr.h  constants.h  structures.h
rinex_files/: ADIS00ETH_R_20261010000_01D_CN.rnx  BDS_B1C_NAV.rnx  BDS_B1C_NAV_18_414M.rnx  BDS_B1C_NAV_8M.rnx  BDS_B1C_NAV_copy.rnx  tarc0370.23b  tarc0910.26alc  tarc3070.25b_cnav
src/: bds_sdr.cpp  bds_sig.cpp  channel.cpp  generateCodeFile.cpp  geodesy.cpp  gnss_time.cpp  inav_msg.cpp  main.cpp  rinex.cpp
traj/: demo.csv
